--- a/WishList/Views/Home/Index.cshtml
+++ b/WishList/Views/Home/Index.cshtml
@@ -1,5 +1,22 @@
-﻿<h1>Welcome!</h1>
+﻿@using Microsoft.AspNetCore.Identity;
+@using WishList.Models;
 
-<div>
-    <a asp-action="Index" asp-controller="Item">View wishlist</a>
-</div>
+@inject SignInManager<ApplicationUser> SignInManager
+
+    @if(SignInManager.IsSignedIn(User))
+    {
+        <div>
+            <form asp-action="Logout" asp-controller="Account" method="post">
+                <button type="submit"></button>
+            </form>
+        </div>
+    }
+    else
+    {
+        <div>
+            <a asp-action="Register" asp-controller="Account">Register</a>
+        </div>
+        <div>
+            <a asp-action="Login" asp-controller="Account">Log in</a>
+        </div>
+    }
